--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,25 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.1'
     defaultConfig {
         applicationId "com.uuch.android_zxinglibrary"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -24,10 +30,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // compile project(':lib-zxing')
-    compile 'cn.yipianfengye.android:zxing-library:2.2'
+    compile project(':lib-zxing')
+    // compile 'cn.yipianfengye.android:zxing-library:2.2'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'pub.devrel:easypermissions:0.2.0'
+    compile 'org.apache.poi:poi:3.15-beta2'
     testCompile 'junit:junit:4.12'
 }
