--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -2,7 +2,7 @@
   "color": "#ff0000",
   "v": "v1.1",
   "users": "QD01/QD02/ZL/RY/ZH/CB",
-  "seal": "PX1007",
+  "seal": "ENTIRE",
   "APP_title": "新学员培训签到系统",
   "ID_title": "新皈依学员 培训证",
   "footprint": "本证仅供本人使用，请勿转借他人。感恩合十"
